conditions.Conditions.scala.error
Erreur de compilation :
Conditions:8: error: Unmatched closing brace '}' ignored here
	}
        ^